# serverless-scripting-examples

./: .gitignore  LICENSE  README.md
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
adding-meta-tags/: script.js
aws4-signing/: .env.example  README.md  index.js  package.json  webpack.config.js
dns-over-https/: .gitignore  README.md  https-worker.go  package.json  tsconfig.json  webpack.config.js
dns-over-https/src/: dns-packet.d.ts  index.ts
graphql/: README.md  index.js  package.json  webpack.config.js
hls-initialization/: README.md  hls.js
jwt-validation/: .eslintrc  README.md  package.json  webpack.config.js
jwt-validation/src/: fetchJWKFromURL.js  getJWK.js  getJWTFromRequest.js  index.js  requestHandler.js  tokenValidator.js
third-party-logging/: README.md  batched-logging.js  inline-logging.js
url-redirection/: README.md  url-redirection.js
wasm-assembly-script/: README.md  index.js  package.json  webpack.config.js
wasm-assembly-script/assembly/: index.ts
wasm-c/: README.md  index.js  package.json  webpack.config.js
wasm-c/C/: fib.c
wasm-rust/: .gitignore  README.md  package.json  wasm_loader.js  webpack.config.js
wasm-rust/rust-image/: Cargo.toml
wasm-rust/rust-image/src/: lib.rs
wasm-rust/src/: index.ts
