[package]
name = "rust-image"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Headers",
  "Response",
  "ResponseInit",
  "WorkerGlobalScope",
]

[dependencies.image]
version = "0.22"
default-features = false
features = [
  "jpeg",
  "png_codec",
]

[profile.release]
lto = true
opt-level = "s"